# mission

./: .gitignore  CMakeLists.txt  README.md  config.h.in  fips.yml
fips-files/configs/: d3d11-win64-vscode-debug.yml
libs/: CMakeLists.txt
libs/basisu/: CMakeLists.txt  README.md  basisu_transcoder.cpp  sokol_basisu.cpp  sokol_basisu.h
libs/cdbgui/: CMakeLists.txt  cdbgui.c  cdbgui.h
libs/cgltf/: cgltf.h  readme.txt
libs/dbgui/: CMakeLists.txt  dbgui.cc  dbgui.h
libs/fontstash/: fontstash.h  readme.txt  stb_truetype.h
libs/microui/: CMakeLists.txt  atlas.inl  microui.c  microui.h  readme.txt
libs/nuklear/: CMakeLists.txt  nuklear.c  nuklear.h  readme.txt
libs/ozzanim/: CMakeLists.txt  readme.txt
libs/ozzanim/include/ozz/animation/runtime/: animation.h  animation_utils.h  blending_job.h  ik_aim_job.h  ik_two_bone_job.h  local_to_model_job.h  sampling_job.h  skeleton.h  (+4 more)
libs/ozzanim/include/ozz/base/: log.h  platform.h
libs/ozzanim/include/ozz/util/: mesh.h
libs/ozzanim/src/: mesh.cc  ozz_animation.cc  ozz_base.cc
libs/ozzutil/: CMakeLists.txt  ozzutil.cc  ozzutil.h
libs/pl_mpeg/: pl_mpeg.h  readme.txt
libs/sokol/: CMakeLists.txt  sokol-dll.c  sokol-noentry.m  sokol.cc  sokol.m  sokol.mm  sokol_memtrack.c
libs/spine-c/: CMakeLists.txt  README.md
libs/spine-c/src/spine/: Json.c
libs/stb/: CMakeLists.txt
libs/util/: CMakeLists.txt  camera.h  fileutil.c  fileutil.h  fileutil_osx.m
src/: CMakeLIsts.txt  api_types.h  arena.c  arena.h  assert.h  asset.c  asset.h  bulk_data.c  bulk_data.h  common.h  config.h  core.h  draw.c  draw.h  game.c  game.h  hashtable.c  hashtable.h  input.c  input.h  log.h  main.c  math.c  math.h  os.c  random.h  render.c  render.h  render_helpers.c  render_helpers.h  shaders.glsl  string.c  string.h  tls.c  tls.h  ui.c  ui.h  utility.c
(+14 files in other folders)
